--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -1,40 +1,39 @@
 <ng-container *ngIf="!isLoading; else loading">
-  <div class="mainContainer"  [ngStyle]="{'filter': overlay ? 'brightness(50%)' : 'brightness(100%)'}">
+  <div class="mainContainer" [ngClass]="{'overlay-active': overlay}">
     <div class="content">
       <div class="top-section">
         <p class="main-title">Pokedex</p>
         <img src="../assets/pokeball-v2.svg" class="pokeball-img" alt="Pokeball icon">
       </div>
 
-      <div *ngIf="pokemonList && pokemonList.length > 0; else noData" class="pokedex"  [ngStyle]="{'pointer-events': overlay ? 'none' : 'auto'}">
+      <div *ngIf="pokemonList && pokemonList.length > 0; else noData" class="pokedex" [ngClass]="{'overlay-active': overlay}">
         <div *ngFor="let pokemon of pokemonList"
-             [ngStyle]="{'background': findColor(pokemon)?.mainColor || '#b7b7b7'}"
-             style="width: 45%; margin-bottom: 15px; height: 120px; border-radius: 15px; padding: 25px 15px; box-sizing: border-box; position: relative; overflow: hidden">
+             class="pokemon-card"
+             [ngStyle]="{'background-color': findColor(pokemon)?.mainColor || '#b7b7b7'}">
           <div *ngIf="pokemon; else missingPokemon">
-            <p style="margin: 0;">{{ pokemon.name }}</p>
-            <div *ngFor="let type of pokemon.types" style="margin-bottom: 5px;">
-              <span [ngStyle]="{'background': findColor(pokemon)?.lightColor || '#D3D3D3'}" style="font-size: 0.7rem; display: inline-block; border-radius: 30px; padding: 2px 10px;">
+            <p class="pokemon-name">{{ pokemon.name }}</p>
+            <div *ngFor="let type of pokemon.types" class="pokemon-type">
+              <span class="type-label" [ngStyle]="{'background-color': findColor(pokemon)?.lightColor || '#D3D3D3'}">
                 {{ type.type.name }}
               </span>
             </div>
-            <p style="position: absolute; top:10px; right: 10px; margin: 0" [ngStyle]="{'color': findColor(pokemon)?.darkColor || '#929292'}">
-              #{{ pokemon.id < 1000 ? ('000' + pokemon.id).slice(-3) : pokemon.id }}
+            <p class="pokemon-id" [ngStyle]="{'color': findColor(pokemon)?.darkColor || '#929292'}">
+              #{{pokemon.id | pokeid}}
             </p>
             <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/{{pokemon.id}}.png"
-                 style="width:50%; height:60%; position: absolute; right: 10px; bottom: 10px; object-fit: fill; z-index: 2"
-                 alt="{{ pokemon.name }}">
+                 class="pokemon-image" alt="{{ pokemon.name }}">
           </div>
 
           <ng-template #missingPokemon>
-            <p style="margin: 0;">?</p>
+            <p class="missing-pokemon">?</p>
           </ng-template>
 
-          <img src="../assets/pokeball-v2.svg" style="opacity: 20%; position: absolute; bottom: -20px; right: -10px" alt="Pokeball icon">
+          <img src="../assets/pokeball-v2.svg" class="background-pokeball" alt="Pokeball icon">
         </div>
       </div>
     </div>
   </div>
-   <app-fab (toggleFABEmiter)="toggleOverlay()" ></app-fab>
+  <app-fab (toggleFABEmiter)="toggleOverlay()" (generationSelected)="filterPokemon($event)" (typeSelected)="filterType($event)"></app-fab>
 </ng-container>
 
 <ng-template #loading>
