--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <p class="main-title">What Pokémon <br> are you looking for?</p>
     <div class="search-container">
       <input type="text" class="search-input" placeholder="Search Pokémon, Move, Ability, etc.">
-      <span class="search-icon">🔍</span>
+      <span class="search-icon"><mat-icon>search</mat-icon></span>
     </div>
     <div class="button-list">
       <div *ngFor="let ctaButton of ctaButtonList" class="grid-item-container" [ngStyle]="{'background': ctaButton.backgroundColor}">
