--- a/src/app/pokedex/pokedex.component.scss
+++ b/src/app/pokedex/pokedex.component.scss
@@ -2,52 +2,115 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100vh; /* La hauteur est fixée à 100% de la vue */
+  height: 100vh;
   background-color: white;
   font-family: circularStd-Medium;
   position: relative;
   overflow: hidden;
-}
 
-.content {
-  flex: 1; /* Permet à .content de prendre tout l'espace restant après .top-section */
-}
+  &.overlay-active {
+    filter: brightness(50%);
+  }
 
-.top-section {
-  background-color: white;
-  border-radius: 0px 0px 20px 20px;
-  padding: 15% 20px 20px 20px;
-  position: relative;
-  z-index: 2;
-  height: 15vh;
-}
+  .content {
+    flex: 1;
 
-.main-title {
-  font-size: 2rem;
-  font-family: circularStd-Black;
-  z-index: 3;
-  position: relative;
-}
+    .top-section {
+      background-color: white;
+      border-radius: 0 0 20px 20px;
+      padding: 15% 20px 20px 20px;
+      position: relative;
+      z-index: 2;
+      height: 15vh;
 
-.pokeball-img {
-  width: 60%;
-  aspect-ratio: 1/1;
-  position: absolute;
-  top: -60px;
-  right: -90px;
-  filter: brightness(98%);
-  z-index: 1;
-}
+      .main-title {
+        font-size: 2rem;
+        font-family: circularStd-Black;
+        z-index: 3;
+        position: relative;
+      }
 
-.pokedex {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 75vh;
-  overflow-y: scroll;
-  padding: 20px;
-  box-sizing: border-box;
-  justify-content: space-around;
-  color: white;
+      .pokeball-img {
+        width: 60%;
+        aspect-ratio: 1 / 1;
+        position: absolute;
+        top: -60px;
+        right: -90px;
+        filter: brightness(98%);
+        z-index: 1;
+      }
+    }
+
+    .pokedex {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      width: 100%;
+      height: 75vh;
+      overflow-y: scroll;
+      padding: 20px;
+      box-sizing: border-box;
+      justify-content: space-around;
+      color: white;
+
+      &.overlay-active {
+        pointer-events: none;
+      }
+
+      .pokemon-card {
+        width: 45%;
+        margin-bottom: 15px;
+        height: 120px;
+        border-radius: 15px;
+        padding: 25px 15px;
+        box-sizing: border-box;
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+
+        .pokemon-name {
+          margin: 0;
+        }
+
+        .pokemon-type {
+          margin-bottom: 5px;
+
+          .type-label {
+            font-size: 0.7rem;
+            display: inline-block;
+            border-radius: 30px;
+            padding: 2px 10px;
+          }
+        }
+
+        .pokemon-id {
+          position: absolute;
+          top: 10px;
+          right: 10px;
+          margin: 0;
+        }
+
+        .pokemon-image {
+          width: 50%;
+          height: 60%;
+          position: absolute;
+          right: 10px;
+          bottom: 10px;
+          object-fit: fill;
+          z-index: 2;
+        }
+
+        .background-pokeball {
+          opacity: 20%;
+          position: absolute;
+          bottom: -20px;
+          right: -10px;
+        }
+
+        .missing-pokemon {
+          margin: 0;
+        }
+      }
+    }
+  }
 }
