--- a/src/app/components/poke-details/poke-details.component.scss
+++ b/src/app/components/poke-details/poke-details.component.scss
@@ -1,34 +1,97 @@
-.detail-main-container{
+.detail-main-container {
   font-family: circularStd-Light;
-  display: flex; 
-  flex-direction: column; width: 100%; height: 100vh; overflow: hidden; justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  justify-content: space-between;
 
   .square-top-left {
-    position: absolute; top: -20px;left: -50px; width: 140px;height: 140px;background: linear-gradient(60deg, rgba(72,208,176,1) 0%, rgba(72,208,176,0) 80%);mix-blend-mode: screen; opacity: 0.3; transform: rotate(-120deg);border-radius: 20px;
+    position: absolute;
+    top: -20px;
+    left: -50px;
+    width: 140px;
+    height: 140px;
+    background: linear-gradient(
+      60deg,
+      rgba(72, 208, 176, 1) 0%,
+      rgba(72, 208, 176, 0) 80%
+    );
+    mix-blend-mode: screen;
+    opacity: 0.3;
+    transform: rotate(-120deg);
+    border-radius: 20px;
   }
 
   .top {
-    display: flex; flex-direction: column; height: 40%; width: 100%; padding: 30px; box-sizing: border-box; position: relative;
-  
+    display: flex;
+    flex-direction: column;
+    height: 40%;
+    width: 100%;
+    padding: 30px;
+    box-sizing: border-box;
+    position: relative;
+
     .arrow-and-fav,
     .name-and-id,
-    .types{
-      display: flex; flex-direction: row; justify-content: space-between; 
+    .types {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
 
       .type-list {
-        display: flex; flex-direction: row; z-index: 3;
+        display: flex;
+        flex-direction: row;
+        z-index: 3;
 
         .type-list-label {
-          margin-right: 20px; background-color: rgb(93, 223, 198); padding: 5px 15px; border-radius: 30px; color: white; font-weight: bold;
+          margin-right: 20px;
+          background-color: rgb(93, 223, 198);
+          padding: 5px 15px;
+          border-radius: 30px;
+          color: white;
+          font-weight: bold;
         }
       }
 
+       .arrow, 
+       .favorite {
+        color: white;
+        scale: 1.4;
+        cursor: pointer;
+      }
+
+
       .type-pokemon {
-        // later
+        color: white;
       }
     }
 
-    .pokeball-icon{
+    .name-and-id{
+      margin-top: 30px;
+      color: white;
+    }
+
+    .name-and-id p{
+      margin: 0;
+    }
+
+    .name-and-id p:nth-child(2){
+      color: white;
+    }
+    .name-and-id p:nth-child(1){
+      font-size: 2.8em;
+      font-family: circularStd-bold;
+    }
+    .name-and-id p:nth-child(2){
+      color: white;
+      font-family: circularStd-bold;
+      font-size: 1.6em;
+    }
+
+    .pokeball-icon {
       width: 60%;
       aspect-ratio: 1 / 1;
       position: absolute;
@@ -38,16 +101,17 @@
       opacity: 30%;
       z-index: 1;
     }
-
-  
-  
-  
   }
 
   .bottom {
-    background-color: white; height: 55%; width: 100%; box-sizing: border-box; border-radius: 30px 30px 0px 0px; position: relative;
-  
-    .img-prev-poke{
+    background-color: white;
+    height: 55%;
+    width: 100%;
+    box-sizing: border-box;
+    border-radius: 30px 30px 0px 0px;
+    position: relative;
+
+    .img-prev-poke {
       height: 30%;
       aspect-ratio: 1/1;
       position: absolute;
@@ -57,7 +121,7 @@
       z-index: 2;
     }
 
-    .img-curr-poke{
+    .img-curr-poke {
       height: 50%;
       aspect-ratio: 1/1;
       position: absolute;
@@ -68,7 +132,7 @@
       z-index: 2;
     }
 
-    .img-next-poke{
+    .img-next-poke {
       height: 30%;
       aspect-ratio: 1/1;
       position: absolute;
@@ -78,90 +142,110 @@
       z-index: 1;
     }
 
-    .nav-tab-container{
-      display: flex; flex-direction: row; width: 90%; margin: 40px auto 0; padding: 20px; justify-content: space-between;
-    
+    .nav-tab-container {
+      display: flex;
+      flex-direction: row;
+      width: 90%;
+      margin: 40px auto 0;
+      padding: 20px;
+      justify-content: space-between;
+
       .tab-label {
-        text-align: center; cursor:pointer; width:25%; padding-bottom: 20px; border-bottom: 0.2px solid #c0c0c0; color: #c0c0c0;
+        text-align: center;
+        cursor: pointer;
+        width: 25%;
+        padding-bottom: 20px;
+        border-bottom: 0.2px solid #c0c0c0;
+        color: #c0c0c0;
       }
-    
     }
 
     .about-section {
-      height: 70%; overflow: auto;
+      height: 70%;
+      overflow: auto;
 
-      .flavor-text{
-        text-align: justify; padding: 0 20px;
+      .flavor-text {
+        text-align: justify;
+        padding: 0 20px;
       }
 
-      .height-and-weight{
-        display: flex; flex-direction : row; width: 90%; box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2); border-radius: 10px; margin: auto;
+      .height-and-weight {
+        display: flex;
+        flex-direction: row;
+        width: 90%;
+        box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+        margin: auto;
 
-        .height, 
+        .height,
         .weight {
           width: 50%;
         }
 
-        .height{
+        .height {
           padding-left: 20px;
         }
-
       }
 
       .breading-section {
-        width: 90%; margin: auto;
+        width: 90%;
+        margin: auto;
 
-        .gender, 
-        .egg-group, 
+        .gender,
+        .egg-group,
         .egg-cycle {
-          display: flex; flex-direction: row; align-items: center
+          display: flex;
+          flex-direction: row;
+          align-items: center;
         }
 
-        .gender .title, 
-        .egg-group .title, 
+        .gender .title,
+        .egg-group .title,
         .egg-cycle .title {
-          margin-right: 30px
+          margin-right: 30px;
         }
 
         .gender {
           .gender-section {
-            display: flex; flex-direction: row;
-            
+            display: flex;
+            flex-direction: row;
+
             .gender-row {
-              display: flex; flex-direction: row; align-items: center; margin-right: 20px;
+              display: flex;
+              flex-direction: row;
+              align-items: center;
+              margin-right: 20px;
 
-
-              .gender-fav-mars, 
+              .gender-fav-mars,
               .gender-fav-venus {
-                margin-right: 10px
+                margin-right: 10px;
               }
 
               .gender-fav-mars {
-                color: #6C79DB; 
+                color: #6c79db;
               }
 
               .gender-fav-venus {
-                color: #F0729F;
+                color: #f0729f;
               }
 
-              p{
-                margin-right: 30px
+              p {
+                margin-right: 30px;
               }
             }
-
           }
         }
 
-        .egg-group{
+        .egg-group {
           div .egg-name {
-            margin-right: 10px
+            margin-right: 10px;
           }
         }
 
-        .egg-cycle{
+        .egg-cycle {
           margin-bottom: 30px;
           p:nth-child(2) {
-            margin-right: 10px
+            margin-right: 10px;
           }
         }
       }
@@ -170,18 +254,27 @@
     .base-stats-section {
       padding: 20px;
       .individual-stats,
-      .total-stats{
-        display: flex; flex-direction: row; align-items: center;
-        .title{
-          width: 35%; margin: 0; text-transform: capitalize;
+      .total-stats {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        .title {
+          width: 35%;
+          margin: 0;
+          text-transform: capitalize;
         }
-        .stats-number{
+        .stats-number {
           margin: 2px 20px 0px 0px;
         }
-        .stats-bar-container{
-          background-color: #e8e8e8; width: 100%; height: 4px; overflow: hidden; border-radius: 20px;
-          .stats-bar{
-            width: 100%; height: 4px;
+        .stats-bar-container {
+          background-color: #e8e8e8;
+          width: 100%;
+          height: 4px;
+          overflow: hidden;
+          border-radius: 20px;
+          .stats-bar {
+            width: 100%;
+            height: 4px;
           }
         }
       }
@@ -193,61 +286,78 @@
       h2 {
         margin-top: 0px;
       }
-      .evolution-container{
-        display: flex; flex-direction: column; height: 25vh; overflow: auto;
+      .evolution-container {
+        display: flex;
+        flex-direction: column;
+        height: 25vh;
+        overflow: auto;
 
-        .evolution-one-to-two{
-          display: flex; flex-direction: row; align-items: center; justify-content: space-between; width: 100%; border-bottom: 1px solid #ededed; margin-bottom: 20px;
+        .evolution-one-to-two {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-between;
+          width: 100%;
+          border-bottom: 1px solid #ededed;
+          margin-bottom: 20px;
         }
 
         .evolution-two-to-three {
-          display: flex; flex-direction: row; justify-content: space-between; width: 100%
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 100%;
         }
 
         .evolution-one-to-two .top-poke-min,
         .evolution-two-to-three .top-poke-min,
         .evolution-one-to-two .bottom-poke-min,
-        .evolution-two-to-three .bottom-poke-min{
-          display:flex; flex-direction: column; align-items:center; width: 30%;
+        .evolution-two-to-three .bottom-poke-min {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 30%;
 
-          .poke-container{
-            background: url(../../../assets/pokeball-v2.svg); background-size: cover; width: 100%; aspect-ratio: 1/1; filter: brightness(95%); display: flex; align-items: center; justify-content: center;
+          .poke-container {
+            background: url(../../../assets/pokeball-v2.svg);
+            background-size: cover;
+            width: 100%;
+            aspect-ratio: 1/1;
+            filter: brightness(95%);
+            display: flex;
+            align-items: center;
+            justify-content: center;
 
-            .pokemon-miniature{
+            .pokemon-miniature {
               width: 80%;
               aspect-ratio: 1/1;
             }
           }
         }
 
-
         .evolution-one-to-two .arrow-container,
-        .evolution-two-to-three .arrow-container{
-          display: flex; flex-direction: column; align-items: center; justify-content: center;
+        .evolution-two-to-three .arrow-container {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
 
-          .mat-icon-arrow{
-            color : #ededed;
+          .mat-icon-arrow {
+            color: #ededed;
           }
 
           .level {
-            margin: 0px; font-weight: 900;
+            margin: 0px;
+            font-weight: 900;
           }
         }
-
-
       }
     }
-  
   }
-
-
-
 }
 
 .selected {
   color: black !important;
-  border-bottom: 2px solid #6C79DB !important;
+  border-bottom: 2px solid #6c79db !important;
   font-weight: 700;
 }
-
-
